--- a/Landing Page.html
+++ b/Landing Page.html
@@ -1,11 +1,15 @@
 <html>
     <head>
         <title>Welcome</title>
-        <link rel="stylesheet" type="text/css" href="stylesheet.css">
+        <link rel="stylesheet" type="text/css" href="Stylesheet.css">
     </head>
-    <body align="center"> 
-        <h1>Welcome</h1>
-        <p></p>
-
+    <body>
+        <ul>
+            <li><a href="Landing Page.html">Home</a></li>
+            <li><a href="news.asp">News</a></li>
+            <li><a href="contact.asp">Contact</a></li>
+            <li><a href="about.asp">About</a></li>
+          </ul>
+        <br>
     </body>
 </html>
