Animated the Background

--- a/Landing Page.html
+++ b/Landing Page.html
@@ -4,7 +4,12 @@
         <link rel="stylesheet" type="text/css" href="Stylesheet.css">
     </head>
     <body>
-        <ul>
+        <div>
+            <div class="wave"></div>
+            <div class="wave"></div>
+            <div class="wave"></div>
+         </div>
+         <ul>
             <li><a href="Landing Page.html">Home</a></li>
             <li><a href="news.asp">News</a></li>
             <li><a href="contact.asp">Contact</a></li>
