Added Logo to Tab

--- a/Landing Page.html
+++ b/Landing Page.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        <title>Welcome</title>
+        <title>Sahayta HUB</title>
+        <link rel="icon" href="image_processing20210131-28302-1y1lham.png" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="Stylesheet.css">
     </head>
     <body>
