Landing page Updated

--- a/Landing Page.html
+++ b/Landing Page.html
@@ -3,6 +3,7 @@
         <title>Sahayta HUB</title>
         <link rel="icon" href="image_processing20210131-28302-1y1lham.png" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="Stylesheet.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     </head>
     <body>
         <div>
@@ -10,12 +11,30 @@
             <div class="wave"></div>
             <div class="wave"></div>
          </div>
+         
          <ul>
             <li><a href="Landing Page.html">Home</a></li>
             <li><a href="news.asp">News</a></li>
             <li><a href="contact.asp">Contact</a></li>
             <li><a href="about.asp">About</a></li>
           </ul>
+        <div class="floating">
+            <p class="welcome">
+                Welcome,<br>
+                <p class="subtext">
+                    We at Sahayta HUB "Empower change with our platform." <br>
+                    Support NGOs and private firms making a difference through <br>
+                    seamless funding and donations."
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    "Be the change you wish to see in the world." - Mahatma Gandhi
+                </p>
+            </p>
+        </div>
         <br>
-    </body>
+        </body>
 </html>
