--- a/Landing Page.html
+++ b/Landing Page.html
@@ -18,11 +18,12 @@
             <li><a href="contact.asp">Contact</a></li>
             <li><a href="about.asp">About</a></li>
           </ul>
+        <div class="container">
         <div class="floating">
             <p class="welcome">
                 Welcome,<br>
                 <p class="subtext">
-                    We at Sahayta HUB "Empower change with our platform." <br>
+                    We at Sahayta HUB "Empower change with our platform." <br><br>
                     Support NGOs and private firms making a difference through <br>
                     seamless funding and donations."
                     <br>
@@ -31,9 +32,24 @@
                     <br>
                     <br>
                     <br>
+                    <p class="sub">
                     "Be the change you wish to see in the world." - Mahatma Gandhi
+                    </p>
                 </p>
             </p>
+        </div>
+        <div class="Start">
+            <p class="Startsub">
+                Let's Get You Started
+            </p>
+            <p class="startsub1">
+                "Welcome to our platform dedicated to creating positive change. Discover and support NGOs and private firms making a difference through funding and donations. Start empowering change today!"
+                <br><br>
+                At our platform, your security is paramount. We employ industry-leading encryption, rigorous security protocols, and comply with stringent standards to ensure your payment information is always safeguarded.
+            </p>
+            <br>
+            <input type="button" value="Sign Up" class="signup">
+        </div>
         </div>
         <br>
         </body>
