Major changes to Landing Page

--- a/Landing Page.html
+++ b/Landing Page.html
@@ -14,9 +14,10 @@
          
          <ul>
             <li><a href="Landing Page.html">Home</a></li>
-            <li><a href="news.asp">News</a></li>
+            <li><a href="news.asp">HUB</a></li>
             <li><a href="contact.asp">Contact</a></li>
-            <li><a href="about.asp">About</a></li>
+            <li><a href="about.asp">Funding</a></li>
+            <li><a href="signin.asp">Sign In</a></li>
           </ul>
         <div class="container">
         <div class="floating">
@@ -24,21 +25,21 @@
                 Welcome,<br>
                 <p class="subtext">
                     We at Sahayta HUB "Empower change with our platform." <br><br>
-                    Support NGOs and private firms making a difference through <br>
-                    seamless funding and donations."
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
+                    Support NGOs and private firms making a difference through seamless funding and donations."
+                    <br><br>
+                <!--At our platform, your security is paramount. We employ industry-leading encryption, rigorous security protocols, and comply with stringent standards to ensure your payment information is always safeguarded.-->
                     <br>
                     <p class="sub">
                     "Be the change you wish to see in the world." - Mahatma Gandhi
                     </p>
-                </p>
+                </p><br>
+                <input type="button" value="Let's Get Started" class="signup">
             </p>
         </div>
+        
         <div class="Start">
+            <img src="Untitled-1.png" height="490px" width="490px">
+            <!--
             <p class="Startsub">
                 Let's Get You Started
             </p>
@@ -48,7 +49,7 @@
                 At our platform, your security is paramount. We employ industry-leading encryption, rigorous security protocols, and comply with stringent standards to ensure your payment information is always safeguarded.
             </p>
             <br>
-            <input type="button" value="Sign Up" class="signup">
+            <input type="button" value="Sign Up" class="signup">-->
         </div>
         </div>
         <br>
