Changed to Hindi

--- a/Landing Page.html
+++ b/Landing Page.html
@@ -24,7 +24,7 @@
             <p class="welcome">
                 Welcome,<br>
                 <p class="subtext">
-                    We at Sahayta HUB "Empower change with our platform." <br><br>
+                    We at सहायता HUB "Empower change with our platform." <br><br>
                     Support NGOs and private firms making a difference through seamless funding and donations."
                     <br><br>
                 <!--At our platform, your security is paramount. We employ industry-leading encryption, rigorous security protocols, and comply with stringent standards to ensure your payment information is always safeguarded.-->
