Made the HUB Page

--- a/Landing Page.html
+++ b/Landing Page.html
@@ -3,7 +3,6 @@
         <title>Sahayta HUB</title>
         <link rel="icon" href="image_processing20210131-28302-1y1lham.png" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="Stylesheet.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     </head>
     <body>
         <div>
@@ -14,7 +13,7 @@
          
          <ul>
             <li><a href="Landing Page.html">Home</a></li>
-            <li><a href="news.asp">HUB</a></li>
+            <li><a href="hub.html">HUB</a></li>
             <li><a href="contact.asp">Contact</a></li>
             <li><a href="about.asp">Funding</a></li>
             <li><a href="signin.asp">Sign In</a></li>
@@ -25,12 +24,13 @@
                 Welcome,<br>
                 <p class="subtext">
                     We at सहायता HUB "Empower change with our platform." <br><br>
-                    Support NGOs and private firms making a difference through seamless funding and donations."
+                    Support NGOs and private firms making a difference through<br>seamless funding and donations."
                     <br><br>
                 <!--At our platform, your security is paramount. We employ industry-leading encryption, rigorous security protocols, and comply with stringent standards to ensure your payment information is always safeguarded.-->
                     <br>
                     <p class="sub">
-                    "Be the change you wish to see in the world." - Mahatma Gandhi
+                    "Be the change you wish to see in the world." <br>
+                    - Mahatma Gandhi
                     </p>
                 </p><br>
                 <input type="button" value="Let's Get Started" class="signup">
