Added the Profile icon

--- a/HTML/Landing Page.html
+++ b/HTML/Landing Page.html
@@ -2,7 +2,7 @@
     <head>
         <title>Sahayta HUB</title>
         <link rel="icon" href="image_processing20210131-28302-1y1lham.png" type="image/x-icon">
-        <link rel="stylesheet" type="text/css" href="Stylesheet.css">
+        <link rel="stylesheet" type="text/css" href="/Stylesheet/Stylesheet.css">
     </head>
     <body>
         <div>
@@ -10,14 +10,20 @@
             <div class="wave"></div>
             <div class="wave"></div>
          </div>
-         
-         <ul>
-            <li><a href="Landing Page.html">Home</a></li>
-            <li><a href="hub.html">HUB</a></li>
-            <li><a href="contact.asp">Contact</a></li>
-            <li><a href="about.asp">Funding</a></li>
-            <li><a href="signin.asp">Sign In</a></li>
-          </ul>
+         <div class="listcontainer">
+            <div class="nav">
+           <ul>
+              <li><a href="Landing Page.html">Home</a></li>
+              <li><a href="hub.html">HUB</a></li>
+              <li><a href="contact.asp">Contact</a></li>
+              <li><a href="about.asp">Funding</a></li>
+              <li><a href="signin.asp">Sign In</a></li>
+            </ul>
+            </div>
+              <div class="icon">
+              <a href="profile.asp"><img class="Profileicon" src="/Images/Profile_Icon-removebg-preview.png"></a>
+              </div>
+            </div>
         <div class="container">
         <div class="floating">
             <p class="welcome">
@@ -38,7 +44,7 @@
         </div>
         
         <div class="Start">
-            <img src="Untitled-1.png" height="490px" width="490px">
+            <img src="/Images/Untitled-1.png" height="490px" width="490px">
             <!--
             <p class="Startsub">
                 Let's Get You Started
