--- a/HTML/hub.html
+++ b/HTML/hub.html
@@ -2,7 +2,7 @@
     <head>
         <title>Sahayta HUB</title>
         <link rel="icon" href="image_processing20210131-28302-1y1lham.png" type="image/x-icon">
-        <link rel="stylesheet" type="text/css" href="Stylesheet.css">
+        <link rel="stylesheet" type="text/css" href="/Stylesheet/Stylesheet.css">
     </head>
     <body>
         <div>
@@ -10,7 +10,8 @@
             <div class="wave"></div>
             <div class="wave"></div>
          </div>
-         
+         <div class="listcontainer">
+          <div class="nav">
          <ul>
             <li><a href="Landing Page.html">Home</a></li>
             <li><a href="hub.html">HUB</a></li>
@@ -18,7 +19,12 @@
             <li><a href="about.asp">Funding</a></li>
             <li><a href="signin.asp">Sign In</a></li>
           </ul>
-          <br>
+          </div>
+            <div class="icon">
+            <a href="profile.asp"><img class="Profileicon" src="/Images/Profile_Icon-removebg-preview.png"></a>
+            </div>
+          </div>
+
           <div class="container1">
             <div class="firm">
 
