--- a/HTML/Landing Page.html
+++ b/HTML/Landing Page.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Sahayta HUB</title>
+        <title>सहायता HUB</title>
         <link rel="icon" href="image_processing20210131-28302-1y1lham.png" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="/Stylesheet/Stylesheet.css">
     </head>
@@ -31,7 +31,7 @@
                 <p class="subtext">
                     We at सहायता HUB "Empower change with our platform." <br><br>
                     Support NGOs and private firms making a difference through<br>seamless funding and donations."
-                    <br><br>
+                    <br>
                 <!--At our platform, your security is paramount. We employ industry-leading encryption, rigorous security protocols, and comply with stringent standards to ensure your payment information is always safeguarded.-->
                     <br>
                     <p class="sub">
