--- a/HTML/hub.html
+++ b/HTML/hub.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Sahayta HUB</title>
+        <title>सहायता HUB</title>
         <link rel="icon" href="image_processing20210131-28302-1y1lham.png" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="/Stylesheet/Stylesheet.css">
     </head>
@@ -30,7 +30,21 @@
 
             </div>
             <div class="profile">
-
+              <img class="iconprofile" src="/Images/3135715.png">
+              <div class="Profile-content">
+                <p align="center">
+                  John Doe
+                </p>
+                <p align="center">
+                  Full-Stack Web Developer | Youtuber
+                </p>
+                <table>
+                  <tr><td class="social"><img class="socials" src="/Images/Gmail Icon.png" height="49px" width="49px"></td><td class="social"><img class="socials" src="/Images/Linkedin Icon.png" height="53px" width="53px"></td><td class="social"><img class="socials" src="/Images/X Icon.png" height="65px" width="65px"></td></tr>
+                </table>
+              </div>
+              <div>
+                <img class="Activity" src="/Images/kisspng-computer-icons-line-chart-diagram-chart-5abb8652e35797.7297863515222390589312-removebg-preview.png">
+              </div>
             </div>
           </div>
     </body>
