Firm Div Changes

--- a/HTML/hub.html
+++ b/HTML/hub.html
@@ -27,7 +27,18 @@
 
           <div class="container1">
             <div class="firm">
-
+              <img class="firmimage" src="/Images/Firm Image.png" height="220px"  >
+              <p class="firmname">
+                Vivid Sphere Innovation
+              </p>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <p class="firmabout">
+                Vivid Sphere Innovation is a forward-thinking non-profit organization dedicated to driving positive societal change through innovation, collaboration, and education. With a deep commitment to making a lasting impact, 
+              </p>
             </div>
             <div class="profile">
               <img class="iconprofile" src="/Images/3135715.png">
@@ -39,7 +50,9 @@
                   Full-Stack Web Developer | Youtuber
                 </p>
                 <table>
-                  <tr><td class="social"><img class="socials" src="/Images/Gmail Icon.png" height="49px" width="49px"></td><td class="social"><img class="socials" src="/Images/Linkedin Icon.png" height="53px" width="53px"></td><td class="social"><img class="socials" src="/Images/X Icon.png" height="65px" width="65px"></td></tr>
+                  <tr><td class="social"><img class="socials" src="/Images/Gmail Icon.png" height="45px" width="45px"></td>
+                      <td class="social"><img class="socials" src="/Images/Linkedin Icon.png" height="50px" width="50px"></td>
+                      <td class="social"><img class="socials" src="/Images/X Icon.png" height="60px" width="60px"></td></tr>
                 </table>
               </div>
               <div>
