Added Firm Data

--- a/HTML/hub.html
+++ b/HTML/hub.html
@@ -37,7 +37,7 @@
               <br>
               <br>
               <p class="firmabout">
-                Vivid Sphere Innovation is a forward-thinking non-profit organization dedicated to driving positive societal change through innovation, collaboration, and education. With a deep commitment to making a lasting impact, 
+                Vivid Sphere Innovation is a dynamic and innovative IT firm that specializes in delivering cutting-edge technological solutions to businesses across diverse industries. With a commitment to excellence.              
               </p>
             </div>
             <div class="profile">
