--- a/HTML/hub.html
+++ b/HTML/hub.html
@@ -2,7 +2,7 @@
     <head>
         <title>सहायता HUB</title>
         <link rel="icon" href="image_processing20210131-28302-1y1lham.png" type="image/x-icon">
-        <link rel="stylesheet" type="text/css" href="/Stylesheet/Stylesheet.css">
+        <link rel="stylesheet" type="text/css" href="/Stylesheet/Stylesheet2.css">
     </head>
     <body>
         <div>
@@ -17,7 +17,6 @@
             <li><a href="hub.html">HUB</a></li>
             <li><a href="contact.asp">Contact</a></li>
             <li><a href="about.asp">Funding</a></li>
-            <li><a href="signin.asp">Sign In</a></li>
           </ul>
           </div>
             <div class="icon">
@@ -39,6 +38,11 @@
               <p class="firmabout">
                 Vivid Sphere Innovation is a dynamic and innovative IT firm that specializes in delivering cutting-edge technological solutions to businesses across diverse industries. With a commitment to excellence.              
               </p>
+              <br>
+              <div class="analytics">
+              <img class="Profit" src="/Images/Profit FIrm.jpeg">
+              <img class="marketcap" src="/Images/Market capital.jpeg">
+              </div>
             </div>
             <div class="profile">
               <img class="iconprofile" src="/Images/3135715.png">
@@ -50,10 +54,11 @@
                   Full-Stack Web Developer | Youtuber
                 </p>
                 <table>
-                  <tr><td class="social"><img class="socials" src="/Images/Gmail Icon.png" height="45px" width="45px"></td>
+                  <td class="social"><img class="socials" src="/Images/Gmail Icon.png" height="45px" width="45px"></td>
                       <td class="social"><img class="socials" src="/Images/Linkedin Icon.png" height="50px" width="50px"></td>
-                      <td class="social"><img class="socials" src="/Images/X Icon.png" height="60px" width="60px"></td></tr>
-                </table>
+                      <td class="social"><img class="socials" src="/Images/X Icon.png" height="60px" width="60px"></td>
+                      <td class="social"><img class="socials" src="/Images/instagram Logo.png" height="50px" width="50px"></td></tr>
+                    </table>
               </div>
               <div>
                 <img class="Activity" src="/Images/kisspng-computer-icons-line-chart-diagram-chart-5abb8652e35797.7297863515222390589312-removebg-preview.png">
