Added more cards for firms

--- a/HTML/hub.html
+++ b/HTML/hub.html
@@ -63,7 +63,46 @@
               <div>
                 <img class="Activity" src="/Images/kisspng-computer-icons-line-chart-diagram-chart-5abb8652e35797.7297863515222390589312-removebg-preview.png">
               </div>
+              <br>
             </div>
+          </div>
+          <div class="contianer2">
+          <div class="morefirms">
+            <img class="mfirmimage" src="/Images/Firm Image.png" height="220px">
+            <p class="goonj">
+              Goonj
+            </p>
+            <p class="goonjabout">
+              Goonj aims to build an equitable relationship of strength sustenance and dignity between the cities and villages, using under-utilized materials as a tool to trigger development with dignity.
+            </p>
+          </div>
+           <div class="morefirms1">
+            <img class="mfirmimage" src="/Images/Firm Image.png" height="220px">
+            <p class="goonj">
+              Goonj
+            </p>
+            <p class="goonjabout">
+              Goonj aims to build an equitable relationship of strength sustenance and dignity between the cities and villages, using under-utilized materials as a tool to trigger development with dignity.
+            </p>
+          </div>
+          <div class="morefirms2">
+            <img class="mfirmimage" src="/Images/Firm Image.png" height="220px">
+            <p class="goonj">
+              Goonj
+            </p>
+            <p class="goonjabout">
+              Goonj aims to build an equitable relationship of strength sustenance and dignity between the cities and villages, using under-utilized materials as a tool to trigger development with dignity.
+            </p>
+          </div>
+          <div class="morefirms3">
+            <img class="mfirmimage" src="/Images/Firm Image.png" height="220px">
+            <p class="goonj">
+              Goonj
+            </p>
+            <p class="goonjabout">
+              Goonj aims to build an equitable relationship of strength sustenance and dignity between the cities and villages, using under-utilized materials as a tool to trigger development with dignity.
+            </p>
+          </div>
           </div>
     </body>
     </html>
