--- a/HTML/hub.html
+++ b/HTML/hub.html
@@ -79,28 +79,28 @@
            <div class="morefirms1">
             <img class="mfirmimage" src="/Images/Firm Image.png" height="220px">
             <p class="goonj">
-              Goonj
+              HelpAge
             </p>
             <p class="goonjabout">
-              Goonj aims to build an equitable relationship of strength sustenance and dignity between the cities and villages, using under-utilized materials as a tool to trigger development with dignity.
+              Work for the cause and care of under-aged elderly people and improve their standard of living.
             </p>
           </div>
           <div class="morefirms2">
             <img class="mfirmimage" src="/Images/Firm Image.png" height="220px">
             <p class="goonj">
-              Goonj
+              Child Rights and You
             </p>
             <p class="goonjabout">
-              Goonj aims to build an equitable relationship of strength sustenance and dignity between the cities and villages, using under-utilized materials as a tool to trigger development with dignity.
+              CRY addresses children’s critical needs of healthcare, nutrition, education and protection from child labour and child marriage.
             </p>
           </div>
           <div class="morefirms3">
             <img class="mfirmimage" src="/Images/Firm Image.png" height="220px">
             <p class="goonj">
-              Goonj
+              Smile Foundation
             </p>
             <p class="goonjabout">
-              Goonj aims to build an equitable relationship of strength sustenance and dignity between the cities and villages, using under-utilized materials as a tool to trigger development with dignity.
+              SMILE more than 400 welfare projects on education, healthcare, livelihood, and women’s empowerment in over 2,000 remote villages and urban slums.
             </p>
           </div>
           </div>
