--- a/HTML/signin.html
+++ b/HTML/signin.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Login Example</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="signin.css">
+        <link rel="stylesheet" href="/Stylesheet/signin.css">
     </head>
     <body>
         <div class="login-wrapper">
@@ -21,14 +21,14 @@
                                 href="#"
                                 title="Use Google"
                             >
-                                <img src="image22.png" alt="Google">
+                                <img src="/Images/image22.png" alt="Google">
                                 Log in with Google
                             </a>
                             <a
                                 href="#"
                                 title="Use Apple"
                             >
-                                <img class="apple" src="apple3.jpg" alt="Apple">
+                                <img class="apple" src="/Images/APPLE3.jpg" alt="Apple">
                                 Log in with Apple
                             </a>
                         </div>
@@ -49,7 +49,7 @@
                             <img
                                 alt="Email Icon"
                                 title="Email Icon"
-                                src="EMAIL.jpg"
+                                src="/Images/EMAIL.jpg"
                             >
                         </div>
                         <div class="text-field">
@@ -64,7 +64,7 @@
                                 pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,}$"
                                 required
                             >
-                            <img class="lock" alt="Password Icon" src="PASSWORD.jpg">
+                            <img class="lock" alt="Password Icon" src="/Images/PASSWORD.jpg">
                         </div>
                         <input type="submit" class="my-form__button" value="Login">
                         <div class="my-form__actions">
