Sign In form Updated

--- a/HTML/signin.html
+++ b/HTML/signin.html
@@ -7,6 +7,11 @@
         <link rel="stylesheet" href="/Stylesheet/signin.css">
     </head>
     <body>
+        <div>
+            <div class="wave"></div>
+            <div class="wave"></div>
+            <div class="wave"></div>
+         </div>
         <div class="login-wrapper">
             <div class="login-side">
                
@@ -28,7 +33,7 @@
                                 href="#"
                                 title="Use Apple"
                             >
-                                <img class="apple" src="/Images/APPLE3.jpg" alt="Apple">
+                                <img class="apple" src="/Images/APPLE2.png" alt="Apple">
                                 Log in with Apple
                             </a>
                         </div>
@@ -46,11 +51,7 @@
                                 placeholder="Your Email"
                                 required
                             >
-                            <img
-                                alt="Email Icon"
-                                title="Email Icon"
-                                src="/Images/EMAIL.jpg"
-                            >
+                            <img class="email" alt="Email Icon" title="Email Icon" src="/Images/EMAIL.png">
                         </div>
                         <div class="text-field">
                             <label for="password">Password:</label>
@@ -64,7 +65,7 @@
                                 pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,}$"
                                 required
                             >
-                            <img class="lock" alt="Password Icon" src="/Images/PASSWORD.jpg">
+                            <img class="lock" alt="Password Icon" src="/Images/PASSWORD.png"> 
                         </div>
                         <input type="submit" class="my-form__button" value="Login">
                         <div class="my-form__actions">
