--- a/HTML/Landing Page.html
+++ b/HTML/Landing Page.html
@@ -13,10 +13,11 @@
          <div class="listcontainer">
             <div class="nav">
            <ul>
+              <li><a href="Landing Page.html">सहायता HUB</a></li>
               <li><a href="Landing Page.html">Home</a></li>
               <li><a href="hub.html">HUB</a></li>
               <li><a href="contact.asp">Contact</a></li>
-              <li><a href="about.asp">Funding</a></li>
+              <li><a href="Funding.html">Funding</a></li>
             </ul>
             </div>
               <div class="icon">
