--- a/HTML/Funding.html
+++ b/HTML/Funding.html
@@ -1,31 +1,8 @@
 <html>
     <head>
         <title>सहायता HUB</title>
-        <link rel="icon" href="image_processing20210131-28302-1y1lham.png" type="image/x-icon">
+        <link rel="icon" href="/Images/logo.jpeg" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="/Stylesheet/Stylesheet3.css">
-        <script>
-            // Facebook Share
-            document.getElementsByClassName('facebook-share').foreach((e)=>{
-                e.addEventListener('click', function() {
-                    var url = encodeURIComponent(window.location.href);
-                    var facebookShareURL = 'https://www.facebook.com/sharer/sharer.php?u=' + url;
-                    window.open(facebookShareURL, '_blank');
-            })})
-            ;
-    
-            // Twitter Share
-            document.getElementsByclassName('twitter-share').addEventListener('click', function() {
-                var text = encodeURIComponent("Exciting campaign update! Check out the latest progress on our crowdfunding project. #Crowdfunding #CampaignUpdate");
-                var twitterShareURL = 'https://twitter.com/intent/tweet?text=' + text;
-                window.open(twitterShareURL, '_blank');
-            });
-    
-            document.getElementsByclassName('paytm').addEventListener('click', function() {
-                var url = encodeURIComponent(window.location.href);
-                var paytmURL = 'https://paytm.com/' + url;
-                window.open(paytmURL, '_blank');
-            });
-        </script>
     </head>
     <body>
         <div>
@@ -39,8 +16,7 @@
               <li><a href="Landing Page.html">सहायता HUB</a></li>
               <li><a href="Landing Page.html">Home</a></li>
               <li><a href="hub.html">HUB</a></li>
-              <li><a href="contact.asp">Contact</a></li>
-              <li><a href="Funding.html">Funding</a></li>
+              <li><a href="Funding.html">Donation</a></li>
             </ul>
             </div>
               <div class="icon">
@@ -77,13 +53,14 @@
             </div>
             </td>
             <td>
-                <div class="campaign">
-                    <img class="cancer" src="/Images/image2funding.jpg">
+             <div class="campaign">
+                    <img class="cancer" src="/Images/wid64d4d881beee2.avif">
                     <p class="cancer1">
-                        Your Support help me undergo cancer treatment take care of my mother my only family....
+                        Support Omkar to beat Cancer
                         <br>
                         <br>
-                        ₹6,90,814 raised out of ₹5,00,000
+                        ₹6,25,855 raised out of ₹10,00,000
+                        <br>
                         <br>
                         <br>
                         <div class="bar">
@@ -91,12 +68,35 @@
                         </div>
                     </p>
                 <!-- Facebook Share Button -->
-        <button class="facebook-share">Share on Facebook</button>
+        <a href="https://www.facebook.com/sharer/sharer.php?u="><button class="facebook-share">Share on Facebook</button></a>
         <!-- Twitter Share Button -->
-        <button class="twitter-share">Share on Twitter</button>
+        <a href="https://twitter.com/intent/tweet?text="><button class="twitter-share">Share on Twitter</button></a>
         <br>
-        <button class="paytm">Donate</button>
-            </td>
+        <a href="https://paytm.com/"><button class="paytm">Donate</button></a>
+        </td>
+        <td>
+            <div class="campaign">
+                <img class="cancer" src="/Images/wid64d22f0a56e14.avif">
+                <p class="cancer1">
+                    Support Mizan to get a healthy Heart
+                    <br>
+                    <br>
+                    ₹1,79,783 raised out of ₹3,50,000
+                    <br>
+                    <br>
+                    <br>
+                    <div class="bar">
+
+                    </div>
+                </p>
+            <!-- Facebook Share Button -->
+    <a href="https://www.facebook.com/sharer/sharer.php?u="><button class="facebook-share">Share on Facebook</button></a>
+    <!-- Twitter Share Button -->
+    <a href="https://twitter.com/intent/tweet?text="><button class="twitter-share">Share on Twitter</button></a>
+    <br>
+    <a href="https://paytm.com/"><button class="paytm">Donate</button></a>
+    </td>
+        </td>
 
     </tr>
     </table>
