--- a/HTML/Landing Page.html
+++ b/HTML/Landing Page.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>सहायता HUB</title>
-        <link rel="icon" href="image_processing20210131-28302-1y1lham.png" type="image/x-icon">
+        <link rel="icon" href="/Images/logo.jpeg" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="/Stylesheet/Stylesheet.css">
     </head>
     <body>
@@ -16,8 +16,7 @@
               <li><a href="Landing Page.html">सहायता HUB</a></li>
               <li><a href="Landing Page.html">Home</a></li>
               <li><a href="hub.html">HUB</a></li>
-              <li><a href="contact.asp">Contact</a></li>
-              <li><a href="Funding.html">Funding</a></li>
+              <li><a href="Funding.html">Donation</a></li>
             </ul>
             </div>
               <div class="icon">
