--- a/HTML/Funding.html
+++ b/HTML/Funding.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div>
-            <div class="wave"></div>
+            <div class="Wave2"></div>
             <div class="wave"></div>
             <div class="wave"></div>
          </div>
